# tetris_html

./: Cargo.toml  README.md  index.html  package.json  tailwind.config.js  tailwind.css  test_tetris_env.py  tetris_env.py
.github/workflows/: gh-pages-deploy.yml
.zcache/: brew_casks  brew_formulae
src/: lib.rs  main.rs
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
