[package]
name = "tetris_html"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3.77"
lazy_static = "1.5.0"
leptos = { version = "0.7.8", features = ["csr"] }
leptos-use = "0.15.7"
rand = "0.9.0"
reactive_stores = "0.1.8"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Document"] }
